; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-subsystem.c_get_shader_program.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-subsystem.c_get_shader_program.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gs_program = type { i32 }
%struct.gs_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.gs_program* (%struct.gs_device*)* @get_shader_program to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.gs_program* @get_shader_program(%struct.gs_device* %0) #0 {
  %2 = alloca %struct.gs_device*, align 8
  %3 = alloca %struct.gs_program*, align 8
  store %struct.gs_device* %0, %struct.gs_device** %2, align 8
  %4 = load %struct.gs_device*, %struct.gs_device** %2, align 8
  %5 = call %struct.gs_program* @find_program(%struct.gs_device* %4)
  store %struct.gs_program* %5, %struct.gs_program** %3, align 8
  %6 = load %struct.gs_program*, %struct.gs_program** %3, align 8
  %7 = icmp ne %struct.gs_program* %6, null
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load %struct.gs_device*, %struct.gs_device** %2, align 8
  %10 = call %struct.gs_program* @gs_program_create(%struct.gs_device* %9)
  store %struct.gs_program* %10, %struct.gs_program** %3, align 8
  br label %11

11:                                               ; preds = %8, %1
  %12 = load %struct.gs_program*, %struct.gs_program** %3, align 8
  ret %struct.gs_program* %12
}

declare dso_local %struct.gs_program* @find_program(%struct.gs_device*) #1

declare dso_local %struct.gs_program* @gs_program_create(%struct.gs_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
